feat(i18n): Finish AudioOrVideoSourceInput component translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
   "title": "One hour of interrupted silence",
-  "resetButton": "Reset"
+  "resetButton": "Reset",
+  "audioOrVideoSourceInputSpan": "or",
+  "youtubeVideoUrlInputPlaceholder": "Youtube link"
 }
