refactor(i18n): Organize translations by components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,13 @@
 {
-  "title": "One hour of interrupted silence",
-  "resetButton": "Reset",
-  "audioOrVideoSourceInputSpan": "or",
-  "youtubeVideoUrlInputPlaceholder": "Youtube link",
-  "fileInputButtonText": "Use audio or video file"
+  "app": {
+    "title": "One hour of interrupted silence",
+    "resetButton": "Reset"
+  },
+  "audioOrVideoSourceInput": {
+    "audioOrVideoSourceInputSpan": "or",
+    "youtubeVideoUrlInputPlaceholder": "Youtube link"
+  },
+  "fileInputButton": {
+    "fileInputButtonText": "Use audio or video file"
+  }
 }
