--- a/src/locales/pt_br.json
+++ b/src/locales/pt_br.json
@@ -1,7 +1,13 @@
 {
-  "title": "Uma hora de silêncio interrompido",
-  "resetButton": "Zerar",
-  "audioOrVideoSourceInputSpan": "ou",
-  "youtubeVideoUrlInputPlaceholder": "Link do youtube",
-  "fileInputButtonText": "Usar arquivo de áudio ou vídeo"
+  "app": {
+    "title": "Uma hora de silêncio interrompido",
+    "resetButton": "Zerar"
+  },
+  "audioOrVideoSourceInput": {
+    "audioOrVideoSourceInputSpan": "ou",
+    "youtubeVideoUrlInputPlaceholder": "Link do youtube"
+  },
+  "fileInputButton": {
+    "fileInputButtonText": "Usar arquivo de áudio ou vídeo"
+  }
 }
