feat(i18n): Finish StartOrPauseTimerButton component translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,5 +9,10 @@
   },
   "fileInputButton": {
     "fileInputButtonText": "Use audio or video file"
+  },
+  "startOrPauseTimerButton": {
+    "startTimerButtonText": "Start",
+    "pauseTimerButtonText": "Pause",
+    "resumeTimerButtonText": "Resume"
   }
 }
