feat: Add page title translation and dynamically define page language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "app": {
+    "pageTitle": "Hour of Interrupted Silence",
     "title": "One hour of interrupted silence",
     "resetButton": "Reset"
   },
