--- a/src/locales/pt_br.json
+++ b/src/locales/pt_br.json
@@ -1,5 +1,6 @@
 {
   "app": {
+    "pageTitle": "Hora de Silêncio Interrompido",
     "title": "Uma hora de silêncio interrompido",
     "resetButton": "Zerar"
   },
