feat: Create YoutubeVideoUrlInput component
- Create YoutubeVideoUrlInput component to separate youtube video url
  input logic from AudioOrVideoSourceInput component

- Modify the i18n translation to create a specific field for the
  new component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,11 +5,13 @@
     "resetButton": "Reset"
   },
   "audioOrVideoSourceInput": {
-    "audioOrVideoSourceInputSpan": "or",
-    "youtubeVideoUrlInputPlaceholder": "Youtube link"
+    "audioOrVideoSourceInputSpan": "or"
   },
   "fileInputButton": {
     "fileInputButtonText": "Use audio or video file"
+  },
+  "youtubeVideoUrlInput": {
+    "placeholder": "Youtube link"
   },
   "startOrPauseTimerButton": {
     "startTimerButtonText": "Start",
